test/hotCases/errors/events/l.js
import values from "./l_exports";

if(module.hot) {
	module.hot.accept("./l_exports");
}
